@@ -3,22 +3,21 @@
 #
 # Table name: opportunities
 #
-#  id               :integer(4)      not null, primary key
-#  uuid             :string(36)
-#  user_id          :integer(4)
-#  account_id       :integer(4)      not null
-#  campaign_id      :integer(4)
-#  name             :string(64)      default(""), not null
-#  source           :string(32)
-#  stage            :string(32)
-#  probability      :integer(4)
-#  amount           :decimal(12, 2)
-#  expected_revenue :decimal(12, 2)
-#  close_on         :date
-#  deleted_at       :datetime
-#  notes            :text
-#  created_at       :datetime
-#  updated_at       :datetime
+#  id          :integer(4)      not null, primary key
+#  uuid        :string(36)
+#  user_id     :integer(4)
+#  account_id  :integer(4)      not null
+#  campaign_id :integer(4)
+#  name        :string(64)      default(""), not null
+#  source      :string(32)
+#  stage       :string(32)
+#  probability :integer(4)
+#  amount      :decimal(12, 2)
+#  close_on    :date
+#  notes       :text
+#  deleted_at  :datetime
+#  created_at  :datetime
+#  updated_at  :datetime
 #
 
 <%
@@ -39,7 +38,7 @@ opportunity_<%= i %>:
   stage       : <%= the_stage = stage[rand(stage.size)] %>
   probability : <%= %w(won lost).include?(the_stage) ? 100 : (rand(8) + 1) * 10 %>
   amount      : <%= (rand(8) + 1) * 100_000 %>
-  close_on    : <%= Date.today + (rand(100) + 10).days %>
+  closes_on   : <%= Date.today + (rand(100) + 10).days %>
   notes       :
   deleted_at  :
   created_at  : <%= starts = Date.today - rand(15).days %>
